Updatig the solution.  Moving solution to use submodules and dev use project refs to these.

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,9 @@ MobileDeliveryMVVM/
 MobileDeliveryServer/
 MobileDeliverySettings
 MobileDeliveryUniversal/
+MobileDeliveryManagerCore/
 UMDGeneral
 WinsysSQLDriver
+.vs
+.vs/*
+packages
